Add pretty-printer for Rensai Document

--- a/rensai-fmt.opam
+++ b/rensai-fmt.opam
@@ -11,6 +11,7 @@ bug-reports: "https://github.com/xvw/kohai/issues"
 depends: [
   "dune" {>= "3.17"}
   "ocaml" {>= "5.2.0"}
+  "ppx_expect" {with-test}
   "rensai" {= version}
   "odoc" {with-doc}
 ]
