--- a/kohai-prelude.opam
+++ b/kohai-prelude.opam
@@ -2,7 +2,7 @@
 opam-version: "2.0"
 version: "dev"
 synopsis: "A small standard library extension"
-description: "Some tools for easing Kohai development"
+description: "Some tools for easing Kohai foundational development"
 maintainer: ["Xavier Van de Woestyne <xaviervdw@gmail.com>"]
 authors: ["Xavier Van de Woestyne <xaviervdw@gmail.com>"]
 license: "MIT"
