--- a/rensai.opam
+++ b/rensai.opam
@@ -16,7 +16,7 @@ depends: [
   "dune" {>= "3.17"}
   "ocaml" {>= "5.2.0"}
   "kohai-prelude" {= version}
-  "fmt"
+  "fmt" {>= "0.9.0"}
   "mdx" {with-test}
   "odoc" {with-doc}
 ]
