--- a/kohai.opam
+++ b/kohai.opam
@@ -17,6 +17,7 @@ depends: [
   "yojson" {>= "2.2.2"}
   "fmt" {>= "0.9.0"}
   "logs" {>= "0.7.0"}
+  "cmdliner" {>= "1.3.0"}
   "eio_main" {>= "1.2"}
   "cohttp-eio" {>= "6.0.0"}
   "ocamlformat" {with-dev-setup}
