--- a/kohai-prelude.opam
+++ b/kohai-prelude.opam
@@ -12,6 +12,7 @@ depends: [
   "dune" {>= "3.17"}
   "ocaml" {>= "5.2.0"}
   "ppx_expect" {with-test}
+  "mdx" {with-test}
   "odoc" {with-doc}
 ]
 build: [
