Some Virtfs Implementation and concret method

--- a/lib/server/dune
+++ b/lib/server/dune
@@ -1,9 +1,7 @@
 (library
  (name kohai_server)
  (public_name kohai.server)
- (flags
-  (:standard)
-   -open Kohai_core)
+ (flags (:standard) -open Kohai_core)
  (libraries
   logs
   logs.fmt
