--- a/bin/dune
+++ b/bin/dune
@@ -2,4 +2,7 @@
  (name kohai)
  (public_name kohai)
  (package kohai)
- (libraries eio eio_main kohai.server))
+ (libraries eio eio_main kohai.server)
+ (promote
+  (until-clean)
+  (into "../")))
