--- a/kohai.opam
+++ b/kohai.opam
@@ -18,8 +18,8 @@ depends: [
   "fmt" {>= "0.9.0"}
   "logs" {>= "0.7.0"}
   "cmdliner" {>= "1.3.0"}
+  "eio" {>= "1.2"}
   "eio_main" {>= "1.2"}
-  "cohttp-eio" {>= "6.0.0"}
   "ocamlformat" {with-dev-setup}
   "ocp-indent" {with-dev-setup}
   "merlin" {with-dev-setup}
