--- a/rensai.opam
+++ b/rensai.opam
@@ -15,6 +15,7 @@ bug-reports: "https://github.com/xvw/kohai/issues"
 depends: [
   "dune" {>= "3.17"}
   "ocaml" {>= "5.3.0"}
+  "menhir"
   "kohai-prelude" {= version}
   "fmt" {>= "0.9.0"}
   "ppx_expect" {with-test}
