--- a/lib/model/dune
+++ b/lib/model/dune
@@ -2,4 +2,4 @@
  (name kohai_model)
  (public_name kohai-core.model)
  (flags (:standard) -open Kohai_core)
- (libraries kohai-core rensai))
+ (libraries kohai-prelude kohai-core rensai))
