--- a/lib/core/dune
+++ b/lib/core/dune
@@ -1,5 +1,5 @@
 (library
  (name kohai_core)
- (public_name kohai-core)
+ (public_name kohai.core)
  (modules_without_implementation sigs)
- (libraries kohai-prelude rensai))
+ (libraries rensai))
