--- a/test/model/dune
+++ b/test/model/dune
@@ -1,7 +1,7 @@
 (library
  (name model_test)
- (package kohai-core)
+ (package kohai)
  (inline_tests)
- (libraries kohai-prelude rensai kohai-core kohai-core.model)
+ (libraries rensai kohai.core kohai.model)
  (preprocess
   (pps ppx_expect)))
