--- a/test/server/dune
+++ b/test/server/dune
@@ -2,6 +2,6 @@
  (name server_test)
  (package kohai)
  (inline_tests)
- (libraries rensai unix fmt kohai-core kohai.server eio yojson)
+ (libraries rensai unix fmt kohai.core kohai.server eio yojson)
  (preprocess
   (pps ppx_expect)))
