--- a/kohai.opam
+++ b/kohai.opam
@@ -14,6 +14,7 @@ depends: [
   "dune" {>= "3.17"}
   "ocaml" {>= "5.3.0"}
   "re"
+  "uri"
   "rensai" {= version}
   "ppx_expect" {with-test}
   "mdx" {with-test}
