--- a/kohai.opam
+++ b/kohai.opam
@@ -15,6 +15,7 @@ depends: [
   "ocaml" {>= "5.3.0"}
   "re"
   "uri"
+  "uuidm"
   "rensai" {= version}
   "ppx_expect" {with-test}
   "mdx" {with-test}
