--- a/kohai.opam
+++ b/kohai.opam
@@ -17,7 +17,7 @@ depends: [
   "uri"
   "uuidm"
   "rensai" {= version}
-  "ppx_expect" {with-test}
+  "ppx_expect"
   "mdx" {with-test}
   "yojson" {>= "2.2.2"}
   "fmt" {>= "0.9.0"}
