--- a/rensai.opam
+++ b/rensai.opam
@@ -14,10 +14,11 @@ homepage: "https://github.com/xvw/kohai"
 bug-reports: "https://github.com/xvw/kohai/issues"
 depends: [
   "dune" {>= "3.17"}
+  "yojson" {>= "2.2.2"}
   "ocaml" {>= "5.3.0"}
   "menhir"
   "fmt" {>= "0.9.0"}
-  "ppx_expect" {with-test}
+  "ppx_expect"
   "mdx" {with-test}
   "odoc" {with-doc}
 ]
