--- a/lib/server/dune
+++ b/lib/server/dune
@@ -1,11 +1,12 @@
 (library
  (name kohai_server)
  (public_name kohai.server)
- (flags (:standard) -open Kohai_core)
+ (flags (:standard) -open Kohai_core -open Kohai_interaction)
  (libraries
   rensai
   kohai.core
   kohai.model
+  kohai.interaction
   yojson
   eio
   eio_main))
