--- a/lib/interaction/dune
+++ b/lib/interaction/dune
@@ -2,9 +2,6 @@
  (name kohai_interaction)
  (public_name kohai.interaction)
  (flags (:standard) -open Kohai_core)
- (libraries
-   rensai
-   kohai.core
-   kohai.model))
+ (libraries rensai kohai.core kohai.model))
 
 (include_subdirs qualified)
