--- a/.github/workflows/test-ocaml-ci.yml
+++ b/.github/workflows/test-ocaml-ci.yml
@@ -32,10 +32,9 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
-      - run: |
-          opam install . --deps-only --with-test
-          opam exec -- dune build
-          opam exec -- dune runtest
+      - run: opam install . --deps-only --with-test
+      - run: opam exec -- dune build
+      - run: opam exec -- dune runtest
 
   lint-doc:
     strategy:
@@ -72,21 +71,3 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
       - uses: ocaml/setup-ocaml/lint-fmt@v3
-
-  lint-opam:
-    strategy:
-      fail-fast: true
-      matrix:
-        os: [ ubuntu-latest ]
-        ocaml-compiler: [ ocaml-base-compiler.5.3.0 ]
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - name: Checkout Tree
-        uses: actions/checkout@v4
-
-      - name: Set-up OCaml
-        uses: ocaml/setup-ocaml@v3
-        with:
-          ocaml-compiler: ${{ matrix.ocaml-compiler }}
-      - uses: ocaml/setup-ocaml/lint-opam@v3
