--- a/rensai.opam
+++ b/rensai.opam
@@ -2,8 +2,11 @@
 opam-version: "2.0"
 version: "dev"
 synopsis: "Rensai can be used to describe generic encoders and decoders"
-description:
-  "By lifting heterogeneous data into a finite set of constructors, it is possible to describe languages similar to JSON, TOML or S-Expression, for which the encoding and validation functions become generic (and interchangeable)."
+description: """
+By lifting heterogeneous data into a finite set of constructors,
+    it is possible to describe languages similar to JSON, TOML or
+    S-Expression, for which the encoding and validation functions
+    become generic (and interchangeable)."""
 maintainer: ["Xavier Van de Woestyne <xaviervdw@gmail.com>"]
 authors: ["Xavier Van de Woestyne <xaviervdw@gmail.com>"]
 license: "MIT"
@@ -11,9 +14,9 @@ homepage: "https://github.com/xvw/kohai"
 bug-reports: "https://github.com/xvw/kohai/issues"
 depends: [
   "dune" {>= "3.17"}
-  "yojson" {>= "2.2.2"}
   "ocaml" {>= "5.3.0"}
   "menhir"
+  "yojson" {>= "2.2.2"}
   "fmt" {>= "0.9.0"}
   "ppx_expect"
   "mdx" {with-test}
